dataset1235/2025-2/610742602/users/3823950083/executions/677928262_1078076002.log
== RUN (2025-08-24 04:16:46)
-- CODE: 
x = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:26)
-- CODE: 
x1 = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:26)
-- CODE: 
x, 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x, 1 = 1.23
       ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x, 1 = 1.23
       ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 04:16:37)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:42)
-- CODE: 
x,y = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:19:31)
-- CODE: 
x1 = "Ufam
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:40)
-- CODE: 
x,y = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:11)
-- CODE: 
X 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    X 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    X 1 = 1.23
      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:18:31)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:51)
-- CODE: 
1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    1 = 1.23
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    1 = 1.23
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:19:38)
-- CODE: 
x1 = "Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:49)
-- CODE: 
x = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 04:17:32)
-- CODE: 
x,1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x,1 = 1.23
      ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x,1 = 1.23
      ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:19:47)
-- CODE: 
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:42)
-- CODE: 
x,y = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:15)
-- CODE: 
X1 = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:47)
-- CODE: 
x = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:16:39)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:20:43)
-- CODE: 
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 04:17:41)
-- CODE: 
x,y = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x,y = 1.23
    ^^^
TypeError: cannot unpack non-iterable float object
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:28)
-- CODE: 
x, 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x, 1 = 1.23
       ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x, 1 = 1.23
       ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 04:17:33)
-- CODE: 
x,1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x,1 = 1.23
      ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x,1 = 1.23
      ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
